# pyudbm

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  auto_rst_top_index.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  setup.py  test_dbm_visual.py  test_fed_visual.py
.github/workflows/: macos_legacy_probe.yaml  release.yaml  release_test.yaml  test.yaml
cibw/: linux_before_build.sh  macos_before_build.sh  windows_before_build.sh
docs/: Makefile
docs/source/: all.mk  api_doc_en.rst  api_doc_zh.rst  conf.py  demos.mk  fcstms.mk  index_en.rst  index_zh.rst  logos.mk  notebook.mk
docs/source/_libs/: dbm_basics_operation_plot_common.py  dbm_basics_plot_common.py  dbm_op.py  dbm_plot.py  fed_plot.py
docs/source/_shims/: pyfcstm
docs/source/_static/css/: custom.css
docs/source/api_doc/: index.rst
docs/source/api_doc/binding/: index.rst  ucdd.rst  udbm.rst  utap.rst  utap_builder.rst  visual.rst
docs/source/api_doc/config/: index.rst  meta.rst
docs/source/foundations/: index.rst  index_zh.rst
docs/source/foundations/cdd/: backward_ops.plot.py  bdd_basics.dot  bdd_basics_zh.dot  contains_cover.plot.py  delay_reset.plot.py  explicit_vs_shared.dot  explicit_vs_shared_zh.dot  index.rst  index_zh.rst  mixed_bool_zone.dot  mixed_bool_zone_zh.dot  mixed_extract.plot.py  runtime_layout.dot  runtime_layout_zh.dot
docs/source/foundations/dbm-basics/: dbm_closure_graph.dot  dbm_closure_graph_zh.dot  dbm_constrain.plot.py  dbm_down.plot.py  dbm_free.plot.py  dbm_reset.plot.py  dbm_up.plot.py  index.rst  index_zh.rst  operation_plot_common.py  plot_common.py  zone_dbm_mapping.dot  zone_dbm_mapping_zh.dot  zone_geometry.plot.py
docs/source/foundations/federations/: decompose.plot.py  fed_add.plot.py  fed_and.plot.py  fed_down.plot.py  fed_extrapolate.plot.py  fed_free.plot.py  fed_or.plot.py  fed_predt.plot.py  fed_properties.plot.py  fed_reduce_intern.plot.py  fed_relations.plot.py  fed_set_init.plot.py  fed_set_zero.plot.py  fed_up.plot.py  fed_update.plot.py  (+4 more)
mds/: MATPLOTLIB_VISUALIZATION_PLAN.md  PR13_VERIFYTA_DOCKER_RUN_GUIDE.md  PR14_UTAP_PYBINDING_INTEGRATION_PLAN.md  PR14_UTAP_SOURCE_RESEARCH.md  PR15_UTAP_PYTHONIC_BUILDER_PLAN.md  PR4+6_MATPLOTLIB_VISUALIZATION_PLAN.md  PR4_MATPLOTLIB_VISUALIZATION_PLAN.md  PR8_UCDD_BINDING_INTEGRATION_PLAN.md  PY2_CHECKLIST.md  UCDD_BINDING_INTEGRATION_PLAN.md  UDBM_CODE_GUIDE.md  UPPAAL_ECOSYSTEM_AND_PYUDBM_LONG_TERM_ROADMAP.md  UPPAAL_TUTORIALS.md  UTAP_PYBINDING_INTEGRATION_PLAN.md  UTAP_PYTHONIC_BUILDER_PLAN.md  UTAP_SOURCE_RESEARCH.md  VERIFYTA_DOCKER_RUN_GUIDE.md
papers/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md
papers/ad90/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/bblp04/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/bdl04/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/behrmann03/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/behrmann03/paper-a/: README.md  README_zh.md  content.md
papers/behrmann03/paper-b/: README.md  README_zh.md  content.md
papers/behrmann03/paper-c/: README.md  README_zh.md  content.md
papers/behrmann03/paper-d/: README.md  README_zh.md  content.md
papers/behrmann03/paper-e/: README.md  README_zh.md  content.md
papers/behrmann03/paper-f/: README.md  README_zh.md  content.md
papers/behrmann03/paper-intro/: README.md  README_zh.md  content.md
papers/bengtsson02/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/bengtsson02/paper-a/: README.md  README_zh.md  content.md
papers/bengtsson02/paper-b/: README.md  README_zh.md  content.md
papers/bengtsson02/paper-c/: README.md  README_zh.md  content.md
papers/bengtsson02/paper-d/: README.md  README_zh.md  content.md
papers/bengtsson02/paper-e/: README.md  README_zh.md  content.md
papers/by04/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/dhlp06/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/dill89/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/llpy97/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/lpw95/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/lpy97/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
papers/rokicki93/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib
papers/ta_tools/: GUIDE.md  GUIDE_zh.md  README.md  README_zh.md  bibtex.bib  content.md
pyudbm/: __init__.py  _binding.cpp  udbm.py
pyudbm/binding/: __init__.py  _binding.cpp  _ucdd.cpp  _udbm.cpp  _utap.cpp  _utap_bindings.hpp  _utap_builder.cpp  ucdd.py  udbm.py  utap.py  utap_builder.py  visual.py
pyudbm/config/: meta.py
pyudbm/core/: constraints.cpp  constraints.py  dbm.cpp  dbm.py
pyudbm/utils/: __init__.py  enum.py
srcpy2/: README.md
test/: conftest.py  test_legacy_api.py
test/binding/: __init__.py  test_api.py  test_matplotlib.py  test_ucdd.py  test_ucdd_native.py  test_utap.py  test_utap_builder_phase1.py  test_utap_builder_phase2.py  test_utap_builder_phase3.py  test_utap_builder_phase4.py  test_utap_builder_phase6.py  test_utap_builder_public_coverage.py  test_utap_field_matrix.py  test_utap_native.py  test_utap_phase0.py  test_utap_phase7.py  test_utap_phase8.py  test_utap_query.py  test_utap_roundtrip.py  test_utap_textual.py  test_visual.py  utap_phase0_data.py  utap_phase4_data.py  utap_phase5_data.py  utap_phase6_data.py  utap_phase7_data.py  utap_phase8_data.py
test/config/: test_meta.py
test/core/: test_constraints.py
test/testfile/official/: README.md  catalog.json  failures.json  manifest.json  query_expectations.json
test/testfile/utap/: minimal_ok.xml  minimal_ok.xta
tools/: __init__.py  build_official_example_catalog.py  papers_to_content.py  udbm_version.py  upstream_versions.py  windows_mingw.py
(+85 files in other folders)
