[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "pybind11[global]",
    "cmake<4",
]

[tool.cibuildwheel]
# Free-threaded 3.13/3.14 wheels are not supported by the current build chain.
skip = ["pp*", "cp31?t-*"] # Do not build for PyPy or free-threaded CPython

## Windows build configuration
[tool.cibuildwheel.windows]
#archs = ["x86", 'AMD64']
archs = ['AMD64']
before-build = [
    "bash -c 'pkg=\"{package}\"; pkg_u=$(cygpath -u \"$pkg\"); exec bash \"$pkg_u/cibw/windows_before_build.sh\" \"$pkg\"'",
]
before-test = [# Unittest for windows
    "python -m pip install -r {project}/requirements-test.txt",
]
test-command = [
    "rm -rf {project}/UUtils_build {project}/UDBM_build {project}/UCDD_build {project}/UTAP_build {project}/bin_install",
    "cp -rf {project}/test test",
    "cp {project}/pytest.ini pytest.ini",
    "pytest test -sv -m unittest --log-level=DEBUG",
    "rm -rf test",
]

## macOS build configuration
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"] # Build for x86_64 and arm64
environment = { CC = "clang", CXX = "clang++", MACOSX_DEPLOYMENT_TARGET = "11.0" }
before-build = [
    "bash -c 'exec bash \"{package}/cibw/macos_before_build.sh\" \"{package}\"'",
]
before-test = [# Unittest for macos
    "python -m pip install -r {project}/requirements-test.txt",
]
test-command = [
    "rm -rf {project}/UUtils_build {project}/UDBM_build {project}/UCDD_build {project}/UTAP_build {project}/bin_install",
    "cp -rf {project}/test test",
    "cp {project}/pytest.ini pytest.ini",
    "pytest test -sv -m unittest --log-level=DEBUG",
    "rm -rf test",
]


## Linux build configuration
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"] # Build for x86_64 and arm64
skip = ["pp*"] # dependencies do not build for PyPy
before-build = [
    "bash -c 'exec bash \"{package}/cibw/linux_before_build.sh\" \"{package}\"'",
]
before-test = [# Unittest for linux
    "python -m pip install -r {project}/requirements-test.txt",
]
test-command = [
    "rm -rf {project}/UUtils_build {project}/UDBM_build {project}/UCDD_build {project}/UTAP_build {project}/bin_install",
    "cp -rf {project}/test test",
    "cp {project}/pytest.ini pytest.ini",
    "pytest test -sv -m unittest --log-level=DEBUG",
    "rm -rf test",
]
